--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -9,12 +9,14 @@
 
 *{
     padding: 0;
-    margin: 0
+    margin: 0;
+    box-sizing: border-box;
 }
+
 
 /* Utilities */
 .container{
-    width: 870px;
+    max-width: 1100px;
     margin: auto;
 }
 
@@ -52,6 +54,7 @@ body{
 /* Header */
 header{
     background: var(--primary-color);
+    padding: 0 33px;
 }
 
 header .container{
@@ -236,7 +239,7 @@ header .container{
 
 @media screen and (max-width: 767px){
     .container{
-        width: 700px;
+        
     }
 
     .players{
@@ -247,12 +250,15 @@ header .container{
         grid-template-columns: 1fr;
         grid-row-gap: 25px;
     }
+
+    .top-blog{
+        grid-template-columns: 1fr;
+    }
 }
 
 
 @media screen and (min-width: 768px) and (max-width:1023px) {
     .container{
-        width: 700px;
     }
 
     .players{
