--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -242,6 +242,10 @@ header .container{
         
     }
 
+    .navbar .nav{
+        display: none;
+    }
+
     .players{
         grid-template-columns: 1fr;
     }
@@ -258,15 +262,12 @@ header .container{
 
 
 @media screen and (min-width: 768px) and (max-width:1023px) {
-    .container{
-    }
-
     .players{
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     .courses{
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(2, 1fr);
         grid-row-gap: 25px;
     }
 }
